[gd_scene load_steps=10 format=2]

[ext_resource path="res://objects/Dog.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/dog.png" type="Texture" id=5]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.05
bounce = 0.2

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.752941, 0.494118, 0, 1 )

[sub_resource type="CapsuleMesh" id=10]
material = SubResource( 2 )
radius = 0.3
mid_height = 0.3
radial_segments = 8
rings = 2

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
albedo_texture = ExtResource( 5 )

[sub_resource type="PlaneMesh" id=12]
material = SubResource( 11 )
size = Vector2( 0.7, 0.7 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0, 0, 0.45, 0, 0, 0.45, 0, 0, 0.45, 0, 0, 0.45, 0, 0, 0.45, 0, 0, 0.45, 0, 0, 0.45, 0, 0, 0.45, 0, 0, 0.45, 0, -0.15, 0.409808, 0.106066, -0.106066, 0.409808, 0.15, -9.18455e-18, 0.409808, 0.106066, 0.106066, 0.409808, 1.83691e-17, 0.15, 0.409808, -0.106066, 0.106066, 0.409808, -0.15, 2.75536e-17, 0.409808, -0.106066, -0.106066, 0.409808, -3.67382e-17, -0.15, 0.409808, 0, -0.259808, 0.3, 0.183712, -0.183712, 0.3, 0.259808, -1.59081e-17, 0.3, 0.183712, 0.183712, 0.3, 3.18162e-17, 0.259808, 0.3, -0.183712, 0.183712, 0.3, -0.259808, 4.77243e-17, 0.3, -0.183712, -0.183712, 0.3, -6.36324e-17, -0.259808, 0.3, 0, -0.3, 0.15, 0.212132, -0.212132, 0.15, 0.3, -1.83691e-17, 0.15, 0.212132, 0.212132, 0.15, 3.67382e-17, 0.3, 0.15, -0.212132, 0.212132, 0.15, -0.3, 5.51073e-17, 0.15, -0.212132, -0.212132, 0.15, -7.34764e-17, -0.3, 0.15, 0, -0.3, 0.15, 0.212132, -0.212132, 0.15, 0.3, -1.83691e-17, 0.15, 0.212132, 0.212132, 0.15, 3.67382e-17, 0.3, 0.15, -0.212132, 0.212132, 0.15, -0.3, 5.51073e-17, 0.15, -0.212132, -0.212132, 0.15, -7.34764e-17, -0.3, 0.15, 0, -0.3, 0.05, 0.212132, -0.212132, 0.05, 0.3, -1.83691e-17, 0.05, 0.212132, 0.212132, 0.05, 3.67382e-17, 0.3, 0.05, -0.212132, 0.212132, 0.05, -0.3, 5.51073e-17, 0.05, -0.212132, -0.212132, 0.05, -7.34764e-17, -0.3, 0.05, 0, -0.3, -0.05, 0.212132, -0.212132, -0.05, 0.3, -1.83691e-17, -0.05, 0.212132, 0.212132, -0.05, 3.67382e-17, 0.3, -0.05, -0.212132, 0.212132, -0.05, -0.3, 5.51073e-17, -0.05, -0.212132, -0.212132, -0.05, -7.34764e-17, -0.3, -0.05, 0, -0.3, -0.15, 0.212132, -0.212132, -0.15, 0.3, -1.83691e-17, -0.15, 0.212132, 0.212132, -0.15, 3.67382e-17, 0.3, -0.15, -0.212132, 0.212132, -0.15, -0.3, 5.51073e-17, -0.15, -0.212132, -0.212132, -0.15, -7.34764e-17, -0.3, -0.15, 0, -0.3, -0.15, 0.212132, -0.212132, -0.15, 0.3, -1.83691e-17, -0.15, 0.212132, 0.212132, -0.15, 3.67382e-17, 0.3, -0.15, -0.212132, 0.212132, -0.15, -0.3, 5.51073e-17, -0.15, -0.212132, -0.212132, -0.15, -7.34764e-17, -0.3, -0.15, 0, -0.259808, -0.3, 0.183712, -0.183712, -0.3, 0.259808, -1.59081e-17, -0.3, 0.183712, 0.183712, -0.3, 3.18162e-17, 0.259808, -0.3, -0.183712, 0.183712, -0.3, -0.259808, 4.77243e-17, -0.3, -0.183712, -0.183712, -0.3, -6.36324e-17, -0.259808, -0.3, 0, -0.15, -0.409808, 0.106066, -0.106066, -0.409808, 0.15, -9.18455e-18, -0.409808, 0.106066, 0.106066, -0.409808, 1.83691e-17, 0.15, -0.409808, -0.106066, 0.106066, -0.409808, -0.15, 2.75536e-17, -0.409808, -0.106066, -0.106066, -0.409808, -3.67382e-17, -0.15, -0.409808, 0, -3.67382e-17, -0.45, 2.59778e-17, -2.59778e-17, -0.45, 3.67382e-17, -2.24949e-33, -0.45, 2.59778e-17, 2.59778e-17, -0.45, 4.49898e-33, 3.67382e-17, -0.45, -2.59778e-17, 2.59778e-17, -0.45, -3.67382e-17, 6.74847e-33, -0.45, -2.59778e-17, -2.59778e-17, -0.45, -8.99796e-33, -3.67382e-17, -0.45 )

[sub_resource type="CylinderShape" id=7]

[node name="Dog" type="RigidBody"]
physics_material_override = SubResource( 1 )
can_sleep = false
axis_lock_angular_x = true
axis_lock_angular_z = true
angular_damp = 0.8
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 10 )
material/0 = null

[node name="Face" type="MeshInstance" parent="."]
transform = Transform( -1, -1.50996e-07, 6.60024e-15, 0, -4.37114e-08, -1, 1.50996e-07, -1, 4.37114e-08, 3.47276e-08, 0.0700857, -0.44994 )
mesh = SubResource( 12 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="StuckTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="LeftTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="RightTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -0.5 )
enabled = true

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 7 )
